# hivemind-wallet

./: .gitignore  Anchor.toml  Cargo.toml  DEEPDIVE.md  EXPLAINER.md  README.md  SKILLS.md  build2.txt  build3.txt  build_fresh.txt  build_output.txt  deploy_out.txt  hivemind-copilot-prompt.md
agents/: .env  .env.example  dev_out.txt  package-lock.json  package.json  tsconfig.json
agents/src/: colony.ts  index.ts  wallet.ts
agents/src/agents/: analyst.ts  executor.ts  ledger.ts  scout.ts
agents/src/dashboard/: index.tsx
agents/src/scripts/: setup.ts
agents/src/services/: jupiter.ts  llm.ts  rpc.ts
programs/hivemind/: Cargo.toml
programs/hivemind/src/: errors.rs  lib.rs  state.rs
programs/hivemind/src/instructions/: agent_pay.rs  emergency_freeze.rs  initialize_colony.rs  mod.rs  register_agent.rs  report_outcome.rs
tests/: hivemind.ts
~/.config/solana/: id.json
