[package]
name = "hivemind"
version = "0.1.0"
description = "Hivemind Colony — multi-agent autonomous AI wallet on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hivemind"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
